plugin-go/plugin.h

typedef enum BundleBehavior BundleBehavior;
typedef uint8_t BundleBehavior;
typedef enum Environment Environment;
typedef uint8_t Environment;
typedef enum OutputFormat OutputFormat;
typedef uint8_t OutputFormat;
typedef enum SourceType SourceType;
typedef uint8_t SourceType;
typedef enum SpecifierType SpecifierType;
typedef uint8_t SpecifierType;
typedef enum Priority Priority;
typedef uint8_t Priority;
typedef enum DiagnosticSeverity DiagnosticSeverity;
typedef uint8_t DiagnosticSeverity;
typedef enum ResolutionType ResolutionType;
typedef uint8_t ResolutionType;
typedef enum DependencyFlags DependencyFlags;
typedef uint8_t DependencyFlags;
typedef enum AssetFlags AssetFlags;
typedef uint32_t AssetFlags;
typedef enum EnvironmentFlags EnvironmentFlags;
typedef uint8_t EnvironmentFlags;
/**
 * Owned byte buffer returned by getter functions.
 * Release with `parcel_free_buffer()` when done.
 * Zero-initialise before use so a no-op getter leaves `data == NULL`.
 */
typedef struct Buffer {
  uint8_t *data;
  uintptr_t len;
  uintptr_t cap;
} Buffer;
/**
 * Opaque handle to a Parcel asset. Pass to `parcel_asset_*` functions.
 */
typedef uint64_t Asset;
/**
 * Opaque handle to Parcel build options. Passed to all plugin entry points.
 */
typedef uint64_t Options;
/**
 * Opaque handle to a Parcel target. Obtained via `parcel_asset_get_target()`.
 */
typedef uint64_t Target;
/**
 * Dependency descriptor passed to `parcel_asset_add_dependency()`.
 * Use `PARCEL_SPECIFIER_ESM` / `PARCEL_PRIORITY_SYNC` / `PARCEL_BUNDLE_BEHAVIOR_NONE` as defaults.
 */
typedef struct DependencyOptions {
  /**
   * Module specifier bytes (e.g. `"./foo.js"`). Required.
   */
  const uint8_t *specifier;
  /**
   * Byte length of `specifier`.
   */
  uintptr_t specifier_len;
  /**
   * `PARCEL_SPECIFIER_*`
   */
  SpecifierType specifier_type;
  /**
   * `PARCEL_PRIORITY_*`
   */
  Priority priority;
  /**
   * `PARCEL_BUNDLE_BEHAVIOR_*`
   */
  BundleBehavior bundle_behavior;
  /**
   * `PARCEL_DEP_*` bits
   */
  DependencyFlags flags;
} DependencyOptions;
/**
 * Opaque handle to a Parcel dependency. Passed to `parcel_plugin_resolve()`.
 */
typedef uint64_t Dependency;
/**
 * Diagnostic written by a plugin to report an error or warning.
 * The host zero-initialises this before every plugin call.
 * Fill via `parcel_buffer_alloc()`; host frees all `Buffer` fields after the call.
 * If `message.data == NULL` after the call, no diagnostic was set.
 */
typedef struct Diagnostic {
  struct Buffer message;
  struct Buffer file_path;
  uint32_t line;
  uint32_t column;
  struct Buffer hint;
  /**
   * `PARCEL_SEVERITY_*`
   */
  DiagnosticSeverity severity;
} Diagnostic;
/**
 * Result filled by a resolver plugin's `parcel_plugin_resolve()`.
 * The struct is zero-initialised by the host before the call.
 *
 * When type == PARCEL_RESOLUTION_FILE_PATH, fill `file_path` (and optionally `pipeline`) via `parcel_buffer_alloc()`.
 */
typedef struct ResolveResult {
  /**
   * `PARCEL_RESOLUTION_*`
   */
  ResolutionType resolution_type;
  struct Buffer file_path;
  struct Buffer pipeline;
} ResolveResult;
/**
 * Release a `Buffer` previously filled by a getter or `parcel_buffer_alloc()`.
 */
void parcel_free_buffer(struct Buffer *buf);
/**
 * Allocates a new `Buffer` containing a copy of `[data, data+len)`.
 * The plugin calls this to fill `ResolveResult` or `Diagnostic` fields.
 * Returns a zero `Buffer` when `data` is NULL or `len` is 0.
 */
struct Buffer parcel_buffer_alloc(const uint8_t *data, uintptr_t len);
/**
 * Returns the asset content into `*buf`. Caller must `parcel_free_buffer(buf)`.
 */
void parcel_asset_get_content(struct Buffer *buf, Asset asset);
/**
 * Replaces the asset content with the given bytes.
 */
void parcel_asset_set_content(Asset asset, const uint8_t *data, uint32_t len);
/**
 * Returns the asset type extension (e.g. `"js"`, `"css"`) into `*buf`.
 * Caller must `parcel_free_buffer(buf)`.
 */
void parcel_asset_get_type(struct Buffer *buf, Asset asset);
/**
 * Changes the asset type to the given file-extension bytes (e.g. `"js"`).
 */
void parcel_asset_set_type(Asset asset, const uint8_t *ty, uintptr_t ty_len);
/**
 * Returns an opaque `Target` handle. Valid for the duration of the transform call.
 */
Target parcel_asset_get_target(Asset asset);
/**
 * Appends a dependency to the asset. The new dependency inherits the asset's target.
 */
void parcel_asset_add_dependency(Asset asset, const struct DependencyOptions *dep);