crates/parcel-plugin/src/ffi.rs

/* automatically generated by rust-bindgen 0.70.1 */

#[repr(u8)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum BundleBehavior {
  None = 0,
  Inline = 1,
  Isolated = 2,
}
impl AssetFlags {
  pub const IS_SOURCE: AssetFlags = AssetFlags(1);
}
impl AssetFlags {
  pub const SIDE_EFFECTS: AssetFlags = AssetFlags(2);
}
impl AssetFlags {
  pub const IS_BUNDLE_SPLITTABLE: AssetFlags = AssetFlags(4);
}
impl AssetFlags {
  pub const LARGE_BLOB: AssetFlags = AssetFlags(8);
}
impl AssetFlags {
  pub const HAS_CJS_EXPORTS: AssetFlags = AssetFlags(16);
}
impl AssetFlags {
  pub const STATIC_EXPORTS: AssetFlags = AssetFlags(32);
}
impl AssetFlags {
  pub const SHOULD_WRAP: AssetFlags = AssetFlags(64);
}
impl AssetFlags {
  pub const IS_CONSTANT_MODULE: AssetFlags = AssetFlags(128);
}
impl AssetFlags {
  pub const HAS_NODE_REPLACEMENTS: AssetFlags = AssetFlags(256);
}
impl AssetFlags {
  pub const HAS_SYMBOLS: AssetFlags = AssetFlags(512);
}
impl AssetFlags {
  pub const IS_HTML_ATTR: AssetFlags = AssetFlags(1024);
}
impl AssetFlags {
  pub const IS_HTML_TAG: AssetFlags = AssetFlags(2048);
}
impl AssetFlags {
  pub const IS_ESM: AssetFlags = AssetFlags(4096);
}
impl ::std::ops::BitOr<AssetFlags> for AssetFlags {
  type Output = Self;
  #[inline]
  fn bitor(self, other: Self) -> Self {
    AssetFlags(self.0 | other.0)
  }
}
impl ::std::ops::BitOrAssign for AssetFlags {
  #[inline]
  fn bitor_assign(&mut self, rhs: AssetFlags) {
    self.0 |= rhs.0;
  }
}
impl ::std::ops::BitAnd<AssetFlags> for AssetFlags {
  type Output = Self;
  #[inline]
  fn bitand(self, other: Self) -> Self {
    AssetFlags(self.0 & other.0)
  }
}
impl ::std::ops::BitAndAssign for AssetFlags {
  #[inline]
  fn bitand_assign(&mut self, rhs: AssetFlags) {
    self.0 &= rhs.0;
  }
}
#[repr(transparent)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub struct AssetFlags(pub u32);
#[repr(u8)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum Environment {
  Browser = 0,
  WebWorker = 1,
  ServiceWorker = 2,
  Worklet = 3,
  Node = 4,
  ElectronMain = 5,
  ElectronRenderer = 6,
  ReactClient = 7,
  ReactServer = 8,
}
#[repr(u8)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum OutputFormat {
  Global = 0,
  Commonjs = 1,
  Esmodule = 2,
}
#[repr(u8)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum SourceType {
  Module = 0,
  Script = 1,
}
impl EnvironmentFlags {
  pub const IS_LIBRARY: EnvironmentFlags = EnvironmentFlags(1);
}
impl EnvironmentFlags {
  pub const SHOULD_OPTIMIZE: EnvironmentFlags = EnvironmentFlags(2);
}
impl EnvironmentFlags {
  pub const SHOULD_SCOPE_HOIST: EnvironmentFlags = EnvironmentFlags(4);
}
impl EnvironmentFlags {
  pub const MODULE_TYPE_EXTENSION: EnvironmentFlags = EnvironmentFlags(8);
}
impl ::std::ops::BitOr<EnvironmentFlags> for EnvironmentFlags {
  type Output = Self;
  #[inline]
  fn bitor(self, other: Self) -> Self {
    EnvironmentFlags(self.0 | other.0)
  }
}
impl ::std::ops::BitOrAssign for EnvironmentFlags {
  #[inline]
  fn bitor_assign(&mut self, rhs: EnvironmentFlags) {
    self.0 |= rhs.0;
  }
}
impl ::std::ops::BitAnd<EnvironmentFlags> for EnvironmentFlags {
  type Output = Self;
  #[inline]
  fn bitand(self, other: Self) -> Self {
    EnvironmentFlags(self.0 & other.0)
  }
}
impl ::std::ops::BitAndAssign for EnvironmentFlags {
  #[inline]
  fn bitand_assign(&mut self, rhs: EnvironmentFlags) {
    self.0 &= rhs.0;
  }
}
#[repr(transparent)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub struct EnvironmentFlags(pub u8);
#[repr(u8)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum SpecifierType {
  Esm = 0,
  Commonjs = 1,
  Url = 2,
  Custom = 3,
}
#[repr(u8)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum Priority {
  Sync = 0,
  Parallel = 1,
  Lazy = 2,
}
impl DependencyFlags {
  pub const ENTRY: DependencyFlags = DependencyFlags(1);
}
impl DependencyFlags {
  pub const OPTIONAL: DependencyFlags = DependencyFlags(2);
}
impl DependencyFlags {
  pub const NEEDS_STABLE_NAME: DependencyFlags = DependencyFlags(4);
}
impl DependencyFlags {
  pub const IS_WEBWORKER: DependencyFlags = DependencyFlags(8);
}
impl DependencyFlags {
  pub const SIDE_EFFECTS: DependencyFlags = DependencyFlags(16);
}
impl DependencyFlags {
  pub const MACRO: DependencyFlags = DependencyFlags(32);
}
impl ::std::ops::BitOr<DependencyFlags> for DependencyFlags {
  type Output = Self;
  #[inline]
  fn bitor(self, other: Self) -> Self {
    DependencyFlags(self.0 | other.0)
  }
}
impl ::std::ops::BitOrAssign for DependencyFlags {
  #[inline]
  fn bitor_assign(&mut self, rhs: DependencyFlags) {
    self.0 |= rhs.0;
  }
}
impl ::std::ops::BitAnd<DependencyFlags> for DependencyFlags {
  type Output = Self;
  #[inline]
  fn bitand(self, other: Self) -> Self {
    DependencyFlags(self.0 & other.0)
  }
}
impl ::std::ops::BitAndAssign for DependencyFlags {
  #[inline]
  fn bitand_assign(&mut self, rhs: DependencyFlags) {
    self.0 &= rhs.0;
  }
}
#[repr(transparent)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub struct DependencyFlags(pub u8);
#[repr(u8)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum DiagnosticSeverity {
  Error = 0,
  Warning = 1,
  SourceError = 2,
  Info = 3,
}
#[repr(u8)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum ResolutionType {
  None = 0,
  FilePath = 1,
  External = 2,
  Excluded = 3,
}
#[doc = " Owned byte buffer returned by getter functions.\n Release with `parcel_free_buffer()` when done.\n Zero-initialise before use so a no-op getter leaves `data == NULL`."]
#[repr(C)]
#[derive(Debug)]
pub struct Buffer {
  pub data: *mut u8,
  pub len: usize,
  pub cap: usize,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
  ["Size of Buffer"][::std::mem::size_of::<Buffer>() - 24usize];
  ["Alignment of Buffer"][::std::mem::align_of::<Buffer>() - 8usize];
  ["Offset of field: Buffer::data"][::std::mem::offset_of!(Buffer, data) - 0usize];
  ["Offset of field: Buffer::len"][::std::mem::offset_of!(Buffer, len) - 8usize];
  ["Offset of field: Buffer::cap"][::std::mem::offset_of!(Buffer, cap) - 16usize];
};
#[doc = " Opaque handle to a Parcel asset. Pass to `parcel_asset_*` functions."]
pub type Asset = u64;
#[doc = " Opaque handle to Parcel build options. Passed to all plugin entry points."]
pub type Options = u64;
#[doc = " Opaque handle to a Parcel target. Obtained via `parcel_asset_get_target()`."]
pub type Target = u64;
#[doc = " Dependency descriptor passed to `parcel_asset_add_dependency()`.\n Use `PARCEL_SPECIFIER_ESM` / `PARCEL_PRIORITY_SYNC` / `PARCEL_BUNDLE_BEHAVIOR_NONE` as defaults."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct DependencyOptions {
  #[doc = " Module specifier bytes (e.g. `\"./foo.js\"`). Required."]
  pub specifier: *const u8,
  #[doc = " Byte length of `specifier`."]
  pub specifier_len: usize,
  #[doc = " `PARCEL_SPECIFIER_*`"]
  pub specifier_type: SpecifierType,
  #[doc = " `PARCEL_PRIORITY_*`"]
  pub priority: Priority,
  #[doc = " `PARCEL_BUNDLE_BEHAVIOR_*`"]
  pub bundle_behavior: BundleBehavior,
  #[doc = " `PARCEL_DEP_*` bits"]
  pub flags: DependencyFlags,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
  ["Size of DependencyOptions"][::std::mem::size_of::<DependencyOptions>() - 24usize];
  ["Alignment of DependencyOptions"][::std::mem::align_of::<DependencyOptions>() - 8usize];
  ["Offset of field: DependencyOptions::specifier"]
    [::std::mem::offset_of!(DependencyOptions, specifier) - 0usize];
  ["Offset of field: DependencyOptions::specifier_len"]
    [::std::mem::offset_of!(DependencyOptions, specifier_len) - 8usize];
  ["Offset of field: DependencyOptions::specifier_type"]
    [::std::mem::offset_of!(DependencyOptions, specifier_type) - 16usize];
  ["Offset of field: DependencyOptions::priority"]
    [::std::mem::offset_of!(DependencyOptions, priority) - 17usize];
  ["Offset of field: DependencyOptions::bundle_behavior"]
    [::std::mem::offset_of!(DependencyOptions, bundle_behavior) - 18usize];
  ["Offset of field: DependencyOptions::flags"]
    [::std::mem::offset_of!(DependencyOptions, flags) - 19usize];
};
#[doc = " Opaque handle to a Parcel dependency. Passed to `parcel_plugin_resolve()`."]
pub type Dependency = u64;
#[doc = " Diagnostic written by a plugin to report an error or warning.\n The host zero-initialises this before every plugin call.\n Fill via `parcel_buffer_alloc()`; host frees all `Buffer` fields after the call.\n If `message.data == NULL` after the call, no diagnostic was set."]
#[repr(C)]
#[derive(Debug)]
pub struct Diagnostic {
  pub message: Buffer,
  pub file_path: Buffer,
  pub line: u32,
  pub column: u32,
  pub hint: Buffer,
  #[doc = " `PARCEL_SEVERITY_*`"]
  pub severity: DiagnosticSeverity,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
  ["Size of Diagnostic"][::std::mem::size_of::<Diagnostic>() - 88usize];
  ["Alignment of Diagnostic"][::std::mem::align_of::<Diagnostic>() - 8usize];
  ["Offset of field: Diagnostic::message"][::std::mem::offset_of!(Diagnostic, message) - 0usize];
  ["Offset of field: Diagnostic::file_path"]
    [::std::mem::offset_of!(Diagnostic, file_path) - 24usize];
  ["Offset of field: Diagnostic::line"][::std::mem::offset_of!(Diagnostic, line) - 48usize];
  ["Offset of field: Diagnostic::column"][::std::mem::offset_of!(Diagnostic, column) - 52usize];
  ["Offset of field: Diagnostic::hint"][::std::mem::offset_of!(Diagnostic, hint) - 56usize];
  ["Offset of field: Diagnostic::severity"][::std::mem::offset_of!(Diagnostic, severity) - 80usize];
};
#[doc = " Result filled by a resolver plugin's `parcel_plugin_resolve()`.\n The struct is zero-initialised by the host before the call.\n\n When type == PARCEL_RESOLUTION_FILE_PATH, fill `file_path` (and optionally `pipeline`) via `parcel_buffer_alloc()`."]
#[repr(C)]
#[derive(Debug)]
pub struct ResolveResult {
  #[doc = " `PARCEL_RESOLUTION_*`"]
  pub resolution_type: ResolutionType,
  pub file_path: Buffer,
  pub pipeline: Buffer,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
  ["Size of ResolveResult"][::std::mem::size_of::<ResolveResult>() - 56usize];
  ["Alignment of ResolveResult"][::std::mem::align_of::<ResolveResult>() - 8usize];
  ["Offset of field: ResolveResult::resolution_type"]
    [::std::mem::offset_of!(ResolveResult, resolution_type) - 0usize];
  ["Offset of field: ResolveResult::file_path"]
    [::std::mem::offset_of!(ResolveResult, file_path) - 8usize];
  ["Offset of field: ResolveResult::pipeline"]
    [::std::mem::offset_of!(ResolveResult, pipeline) - 32usize];
};
unsafe extern "C" {
  #[doc = " Release a `Buffer` previously filled by a getter or `parcel_buffer_alloc()`."]
  pub fn parcel_free_buffer(buf: *mut Buffer);
}
unsafe extern "C" {
  #[doc = " Allocates a new `Buffer` containing a copy of `[data, data+len)`.\n The plugin calls this to fill `ResolveResult` or `Diagnostic` fields.\n Returns a zero `Buffer` when `data` is NULL or `len` is 0."]
  pub fn parcel_buffer_alloc(data: *const u8, len: usize) -> Buffer;
}
unsafe extern "C" {
  #[doc = " Returns the asset content into `*buf`. Caller must `parcel_free_buffer(buf)`."]
  pub fn parcel_asset_get_content(buf: *mut Buffer, asset: Asset);
}
unsafe extern "C" {
  #[doc = " Replaces the asset content with the given bytes."]
  pub fn parcel_asset_set_content(asset: Asset, data: *const u8, len: u32);
}
unsafe extern "C" {
  #[doc = " Returns the asset type extension (e.g. `\"js\"`, `\"css\"`) into `*buf`.\n Caller must `parcel_free_buffer(buf)`."]
  pub fn parcel_asset_get_type(buf: *mut Buffer, asset: Asset);
}
unsafe extern "C" {
  #[doc = " Changes the asset type to the given file-extension bytes (e.g. `\"js\"`)."]
  pub fn parcel_asset_set_type(asset: Asset, ty: *const u8, ty_len: usize);
}
